# UncertaintyLens

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Portfolio_Action_Plan.md  Project2_Anomaly_Detection_Plan.md  README.md  TUTORIAL.md  UncertaintyLens_完整教程.md  UncertaintyLens_项目方案书.docx  pyproject.toml  requirements.txt
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml
app/: main.py
examples/: __init__.py  benchmark_accuracy.py  benchmark_all.py  benchmark_blind.py  benchmark_ensemble.py  benchmark_extended.py  benchmark_real_data.py  generate_demo_report.py  generate_report.py  test_dashboard.py
examples/advertising/: analyze_ad_data.py
examples/ecommerce/: analyze_ecommerce.py
examples/supply_chain/: analyze_supply_chain.py
examples/titanic/: CASE_STUDY.md  analyze_titanic.py
tests/: test_accuracy.py  test_adaptive_mmd.py  test_basic.py  test_deep_ensemble.py  test_explainer.py  test_jackknife_plus.py  test_mmd_shift.py  test_streaming.py  test_tier1.py  test_tier2.py  test_zero_inflation.py
uncertainty_lens/: __init__.py  pipeline.py
uncertainty_lens/detectors/: __init__.py  anomaly.py  catboost_uncertainty.py  conformal_predictor.py  conformal_shift.py  decomposition.py  deep_ensemble.py  jackknife_plus.py  missing_pattern.py  mmd_shift.py  streaming_detector.py  uncertainty_explainer.py  variance.py  zero_inflation.py
uncertainty_lens/quantifiers/: __init__.py  monte_carlo.py
uncertainty_lens/visualizers/: __init__.py  confidence.py  decision.py  explainer_charts.py  heatmap.py  report.py  sankey.py
